cabal-version:      2.4
name:               restart-haskell
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:
author:             hekt
maintainer:         hektorg@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

common shared-properties
    default-language: Haskell2010
    build-depends:    base ^>=4.13.0.0
    default-language: Haskell2010
    ghc-options:
        -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
        -Wmissing-import-lists -Wcompat

library
    import:          shared-properties
    hs-source-dirs:  src
    exposed-modules: MyLib

executable restart-haskell
    import:         shared-properties
    build-depends:  restart-haskell
    hs-source-dirs: app
    main-is:        Main.hs

test-suite restart-haskell-test
    import:         shared-properties
    type:           exitcode-stdio-1.0
    hs-source-dirs: test
    main-is:        MyLibTest.hs
